# moons-metrology

./: Makefile  README.md  align.py  coord_transform.py  coord_transform2.py  environment.yml  get_corr.py  pnt_filter.py  pyproject.toml  setup.py
ICS_code/: preprocessing.py
caltest_25_03_22/: 100_deg.txt  10_deg.txt  minus_80.txt
data/caltest_25_03_22/: fiducial_m170.txt  minus_170.txt
data/mask_test/: transformed_coords_mask1_15092021.txt
src/: align.py  coord_transform2.py  do_transform.py  find_datum_offset.py  find_mask_height.py  get_corr.py  metro_io.py  pltpolar2pltcart.py  pnt_filter.py  preprocessing.py  repeatibility.py  view_metro_image.py
src/transform/: acq_cam.py  plate.py  spatial.py
test_data/: AC_nominal_positions.csv
test_data/PAE-AC-TESTS_JUL2024/: METRO_OUT.txt
test_data/PAE-AC-TESTS_JUL2024/AC-IMAGE/: MOONS2_TCCDACQ10_2024-06-28T09_39_23.txt  MOONS2_TCCDACQ18_2024-06-28T09_40_15.txt  MOONS2_TCCDACQ1_2024-06-28T09_38_26.txt  MOONS2_TCCDACQ6_2024-06-28T09_37_49.txt  MOONS2_TCCDACQ7_2024-06-28T09_38_48.txt  MOONS2_TCCDACQ9_2024-06-28T09_39_05.txt
test_data/reference_190325/processed/: REFERENCE_CODED_TARGETS_190325.txt
test_data/reference_190325/raw/reference_images1/: Coordinates_file-2025-03-14T16:17:22.txt  Coordinates_file_filtered-2025-03-14T16:17:22.txt  (+2 more)
testing_notebooks/: AC-pix2plt-workflow.ipynb
testing_scripts/: build_fid_mask.py  calibrations.py  find_datum_offset.py  find_mask_height.py  get_mask_matrices.py  metro_accuracy_tests.py  plot_FPU_detections.py  repeatibility.py  transform_AC_pnts.py
(+4 files in other folders)
